Better code blocks: fixed navbar when expanded, scroll on collapse, single code block if no hidden copy

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,10 @@ body {
   top: 65px;
 }
 
+.close-to-main-navbar {
+  top: 55px;
+}
+
 .main-navbar {
   background-color: skyblue;
   -webkit-box-shadow: 0 8px 6px -6px #999;
